# prm

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: commands.hpp  exit.hpp  setup.hpp  store.hpp  utils.hpp
installer/: install.sh  installer.ps1  installer.sh
src/: commands.cpp  main.cpp  setup.cpp  store.cpp  utils.cpp
